Fix: Footer 모바일 뷰 , margin-top 필요한 페이지들 수정 #131 - 모바일 body overflow-x hidden 추가

--- a/src/app/(user)/charge/_ChargePage.scss
+++ b/src/app/(user)/charge/_ChargePage.scss
@@ -10,3 +10,9 @@
   max-width: 75rem;
   margin: 0 auto;
 }
+
+@media (max-width: 480px) {
+  .charge-page-container {
+    margin-top: 10rem;
+  }
+}
