--- a/src/app/(user)/mypage/_MyPage.scss
+++ b/src/app/(user)/mypage/_MyPage.scss
@@ -244,3 +244,9 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .mypage-container {
+    margin-top: 10rem;
+  }
+}
